# arduboy-emu

./: .gitignore  BUILDING.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.ja.md  README.md  ROADMAP.md  build-installers.sh
.github/workflows/: release.yml
crates/core/: Cargo.toml
crates/core/src/: arduboy_file.rs  audio_buffer.rs  cpu.rs  debugger.rs  disasm.rs  display.rs  elf.rs  gdb_server.rs  gif.rs  hex.rs  lib.rs  memory.rs  opcodes.rs  pcd8544.rs  png.rs  profiler.rs  savestate.rs  snapshot.rs
crates/core/src/peripherals/: adc.rs  eeprom.rs  fx_flash.rs  mod.rs  pll.rs  spi.rs  timer16.rs  timer4.rs  timer8.rs
crates/frontend-minifb/: Cargo.toml
crates/frontend-minifb/src/: main.rs
installers/linux/: build-linux.sh
installers/macos/: build-macos.sh
installers/windows/: arduboy-emu.iss  arduboy-emu.wxs  build-msi.bat  build-windows.bat
roms/: copyrom.bat
